fix visibility of clear completed button, added toggleTodoStatus button and toggleAllTodoStatus button

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,3 +44,8 @@
   transform: translateY(0);
   overflow: hidden;
 }
+
+.hidden {
+  visibility: hidden;
+}
+
